--- a/001.html
+++ b/001.html
@@ -87,7 +87,7 @@
 		<td colspan="2" rowspan="4">
 			<img src="images/003_18.jpg" width="168" height="199" alt=""></td>
 		<td colspan="4" rowspan="3">
-			<a href="https://www.youtube.com/" target="_blank"
+			<a href="https://sites.google.com/view/cycustudentclub" target="_blank"
 				onmouseover="window.status='學生社團總覽';  return true;"
 				onmouseout="window.status='';  return true;">
 				<img src="images/&#x5b78;&#x751f;&#x793e;&#x5718;&#x7e3d;&#x89bd;.jpg" width="188" height="190" border="0" alt=""></a></td>
