--- a/001.html
+++ b/001.html
@@ -74,7 +74,7 @@
 		<td colspan="3">
 			<img src="images/003_15.jpg" width="137" height="73" alt=""></td>
 		<td colspan="3" rowspan="2">
-			<a href="https://fm.cycu.edu.tw/brochure.html" target="_blank"
+			<a href="./111學年度新生學涯體驗營資料手冊.pdf" target="_blank"
 				onmouseover="window.status='新生資料冊';  return true;"
 				onmouseout="window.status='';  return true;">
 				<img src="images/&#x65b0;&#x751f;&#x8cc7;&#x6599;&#x518a;.jpg" width="169" height="160" border="0" alt=""></a></td>
