--- a/001.html
+++ b/001.html
@@ -108,7 +108,7 @@
 		<td colspan="2" rowspan="8">
 			<img src="images/003_23.jpg" width="82" height="582" alt=""></td>
 		<td colspan="4" rowspan="6">
-			<a href="https://acadm.cycu.edu.tw/%E8%AA%B2%E5%8B%99%E8%88%87%E8%A8%BB%E5%86%8A%E7%B5%84%E8%81%AF%E5%90%88%E8%A1%8C%E6%9C%8D%E5%8B%99%E4%B8%AD%E5%BF%83/%E6%96%B0%E7%94%9F%E5%B0%88%E5%8D%80/%E5%A4%A7%E5%AD%B8%E9%83%A8%E6%96%B0%E7%94%9F%E5%B0%88%E5%8D%80/%E6%96%B0%E7%94%9F%E5%85%A5%E5%AD%B8%E9%A0%88%E7%9F%A5/" target="_blank"
+			<a href=" " target="_blank"
 				onmouseover="window.status='新生入學須知';  return true;"
 				onmouseout="window.status='';  return true;">
 				<img src="images/&#x65b0;&#x751f;&#x5165;&#x5b78;&#x9808;&#x77e5;.jpg" width="406" height="240" border="0" alt=""></a></td>
